--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
                     </li>
                     <li class="u-nav-item"><a
                             class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
-                            href="#" style="padding: 10px 20px;">Contact</a>
+                            href="/view-publications" style="padding: 10px 20px;">Publications</a>
                     </li>
                     <li class="u-nav-item login"><a
                             class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
