feat: blog page and edit button

--- a/public/blog.html
+++ b/public/blog.html
@@ -118,6 +118,13 @@
     </div>
 </header>
 
+
+<!-- optional add button -->
+<section id="add_button">
+</section>
+
+
+<!-- main content -->
 <section id="blog">
     <ul class="list-group" id="post_list">
 </section>
