fix: navbar dropdown works

--- a/private/editBlogpost.html
+++ b/private/editBlogpost.html
@@ -21,7 +21,13 @@
     <script src="js/editBlogpost.js" defer></script>
 </head>
 <body>
-    HELLO EDIT PAGE
+    <section id="nav-placeholder">
+        <script>
+            $("#nav-placeholder").load("navbar.html");
+        </script>
+    </section>
+
+    hi edit page
     
 </body>
 </html>
