--- a/private/editPublication.html
+++ b/private/editPublication.html
@@ -56,79 +56,12 @@
 
 </head>
 <body>
-<header class="u-clearfix u-custom-color-1 u-header u-header" id="sec-20b8">
-    <div class="u-clearfix u-sheet u-sheet-1">
-        <a href="/" class="u-image u-logo u-image-1" data-image-width="300" data-image-height="300">
-            <img src="pictures/Clark_logo.png" class="u-logo-image u-logo-image-1">
-        </a>
-        <h5 class="u-align-center u-text u-text-1">Extractives @Clark&nbsp;</h5>
-        <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
-            <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
-                <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
-                   href="#">
-                    <svg class="u-svg-link" viewBox="0 0 24 24">
-                        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use>
-                    </svg>
-                    <svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px"
-                         xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
-                        <g>
-                            <rect y="1" width="16" height="2"></rect>
-                            <rect y="7" width="16" height="2"></rect>
-                            <rect y="13" width="16" height="2"></rect>
-                        </g>
-                    </svg>
-                </a>
-            </div>
-            <div class="u-nav-container">
-                <ul class="u-nav u-unstyled u-nav-1">
-
-                    <li class="u-nav-item login"><a
-                            class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
-                            href="/login" style="padding: 10px 20px;">Login</a>
-                    </li>
-                    <li class="u-nav-item login"><a
-                            class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
-                            href="/register" style="padding: 10px 20px;">Register</a>
-                    </li>
-                    <li class="u-nav-item logout"><a
-                            class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
-                            href="/logout" style="padding: 10px 20px;">Logout</a>
-                    </li>
-                    <li class="u-nav-item "><a
-                            class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
-                            href="/admin-pub-list" style="padding: 10px 20px;">Edit Publications</a>
-                    </li>
-                    <li class="u-nav-item">
-                        <div class="navbar-brand mb-0 logout">Hello, <span id="showname"></span></div>
-                    </li>
-                </ul>
-            </div>
-            <div class="u-nav-container-collapse">
-                <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
-                    <div class="u-inner-container-layout u-sidenav-overflow">
-                        <div class="u-menu-close"></div>
-                        <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2">
-                            <li class="u-nav-item"><a class="u-button-style u-nav-link" href="/">Home</a>
-                            </li>
-                            <li class="u-nav-item"><a class="u-button-style u-nav-link" href="/our-team">Our Team</a>
-                            </li>
-                            <li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">About</a>
-                            </li>
-                            <li class="u-nav-item"><a class="u-button-style u-nav-link login" href="/login">Log In</a>
-                            </li>
-                            <li class="u-nav-item"><a class="u-button-style u-nav-link login" href="/register">Register</a>
-                            </li>
-                            <li class="u-nav-item"><a class="u-button-style u-nav-link logout" href="/logout">Logout</a>
-                            </li>
-                            <li class="u-nav-item logout"><p>Hello,</p><span id="showname2"></span></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
-            </div>
-        </nav>
-    </div>
-</header>
+    
+    <section id="nav-placeholder">
+        <script>
+            $("#nav-placeholder").load("navbar.html");
+        </script>
+    </section>
 
 
 <section id="edit_movie">
