--- a/public/navbar.html
+++ b/public/navbar.html
@@ -39,6 +39,10 @@
                             class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
                             href="/publications" style="padding: 10px 20px;">Publications</a>
                     </li>
+                    <li class="u-nav-item"><a
+                        class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
+                        href="/view-blog" style="padding: 10px 20px;">Blog</a>
+                </li>
                     <li class="u-nav-item login"><a
                             class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
                             href="/login" style="padding: 10px 20px;">Login</a>
@@ -75,6 +79,10 @@
                             </li>
                             <li class="u-nav-item"><a class="u-button-style u-nav-link login" href="/register">Register</a>
                             </li>
+                            <li class="u-nav-item"><a
+                                class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
+                                href="/view-blog" style="padding: 10px 20px;">Blog</a>
+                        </li>
                             <li class="u-nav-item"><a class="u-button-style u-nav-link logout" href="/logout">Logout</a>
                             </li>
                             <li class="u-nav-item logout"><p>Hello,</p><span id="showname2"></span></li>
@@ -96,11 +104,9 @@
                 if (data.data.username) {
                     $(".login").hide();
                     $(".logout").show();
-                    $(".greeting").show();
                 }
                 else {
                     $(".login").show();
-                    $(".greeting").hide();
                     $(".logout").hide();
                 }
             })
