--- a/public/blog.html
+++ b/public/blog.html
@@ -63,12 +63,10 @@
 
 
 <!-- Footer -->
-<div id="footer-placeholder">
-</div>
+<section id="footer-placeholder">
+</section>
 <script>
-    $(function(){
-      $("#footer-placeholder").load("footer.html");
-    });
+    $("#footer-placeholder").load("footer.html");
 </script>
 
 
