--- a/public/login.html
+++ b/public/login.html
@@ -72,31 +72,14 @@
     </div>
 </div>
 
-<footer class="u-align-center u-clearfix u-footer  u-footer" id="sec-51a4">
-    <div class="u-clearfix u-sheet u-sheet-1">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-6 mt-1">
-                    <h5>Contact Us 📇</h5>
-                    <hr/>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">📧: Extractives@clarku.edu</li>
-                        >
-                        <li class="list-group-item">🏡:</li>
-                        <li class="list-group-item">🏡:</li>
-                        <li class="list-group-item">© 2022,Clark Extractives</li>
-                    </ul>
-                </div>
-                <div class="col-lg-6 mt-3">
-                    <h5> Location 📍</h5>
-                    <div class="map">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23624.7615989174!2d-71.82417919999999!3d42.2551395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e40682b87fab99%3A0x624936e163b39652!2sInternational%20Development%2C%20Community%2C%20and%20Environment%2C%20Worcester%2C%20MA%2001610!5e0!3m2!1sen!2sus!4v1649699595686!5m2!1sen!2sus"></iframe>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
+<!-- Footer -->
+<section id="footer-placeholder">
+</section>
+<script>
+    $("#footer-placeholder").load("footer.html");
+
+</script>
+
 
 </body>
 </html>
