feat: admin page for blogposts with add and delete function (autofill on edit not done)

--- a/private/BlogListAdmin.html
+++ b/private/BlogListAdmin.html
@@ -36,7 +36,7 @@
     <meta property="og:title" content="Home">
     <meta property="og:type" content="website">
     
-    <script src="js/blog.js" defer></script>
+    <script src="js/BlogListAdmin.js" defer></script>
 
 </head>
 <body class="u-body u-xl-mode">
@@ -50,19 +50,13 @@
     });
 </script>
 
+<a href="/get-edit-Blogpost" class="btn btn-primary btn-lg mt-3 mx-3" role="button">Add New Blog Post</a>
 
 <!-- main content -->
 <section id="blog">
     <ul class="list-group" id="post_list">
 </section>
 
-
-<!-- Footer -->
-<section id="footer-placeholder">
-</section>
-<script>
-    $("#footer-placeholder").load("footer.html");
-</script>
 
 
 </body>
