--- a/private/admin_portal.html
+++ b/private/admin_portal.html
@@ -50,6 +50,11 @@
 
 <h1>Welcome Admin</h1>
 <a href="/admin-pub-list">Edit Publications</a>
+<br>
+<a href="/admin-blog-list">Edit Blogposts</a>
+
+
+
 
 </body>
 </html>
