--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,12 @@
     </div>
 </section>
 
-
+<!-- Footer -->
+<section id="footer-placeholder">
+</section>
+<script>
+    $("#footer-placeholder").load("footer.html");
+</script>
 
 
 
