--- a/public/navbar.html
+++ b/public/navbar.html
@@ -3,7 +3,7 @@
         <a href="/" class="u-image u-logo u-image-1" data-image-width="300" data-image-height="300">
             <img src="pictures/Clark_logo.png" class="u-logo-image u-logo-image-1">
         </a>
-        <h5 class="u-align-center u-text u-text-1">Extractives @Clark&nbsp;</h5>
+        <h5 class="u-align-center u-text u-text-1">Extractivestest @Clark&nbsp;</h5>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
             <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
                 <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
