--- a/public/blog.html
+++ b/public/blog.html
@@ -36,6 +36,7 @@
     <meta property="og:title" content="Home">
     <meta property="og:type" content="website">
     
+    <link rel="stylesheet" href="css/publications.css">
     <script src="js/blog.js" defer></script>
 
 </head>
