feat: about page, fix: title tags for multiple pages, feat: blog sorting by date, feat: blog comments have date

--- a/public/PublicationList.html
+++ b/public/PublicationList.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="Extractives @Clark">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Home</title>
+    <title>Publications</title>
     <link rel="stylesheet" href="css/nicepage.css" media="screen">
     <link rel="stylesheet" href="css/Home.css" media="screen">
     <link rel="stylesheet" href="css/publications.css" media="screen">
