--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
         <h1 class="u-text u-text-default u-title u-text-1">Extractives @Clark</h1>
         <p class="u-align-center u-large-text u-text u-text-variant u-text-2">Welcome to the clark center for the study
             of natural resource extraction</p>
-        <a href="#" class="u-btn u-button-style u-palette-2-base u-btn-1">Read More</a>
+        <a href="/about" class="u-btn u-button-style u-palette-2-base u-btn-1">Read More</a>
     </div>
 </section>
 
