--- a/public/navbar.html
+++ b/public/navbar.html
@@ -28,6 +28,10 @@
                             href="/" style="padding: 10px 20px;">Home</a>
                     </li>
                     <li class="u-nav-item"><a
+                        class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
+                        href="/about" style="padding: 10px 20px;">About</a>
+                </li>
+                    <li class="u-nav-item"><a
                             class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
                             href="/our-team" style="padding: 10px 20px;">Our Team</a>
                     </li>
