finished events function

--- a/public/index.html
+++ b/public/index.html
@@ -40,14 +40,11 @@
 <body class="u-body u-xl-mode">
 
 <!-- Navbar -->
-<div id="nav-placeholder">
-</div>
-<script>
-    $(function(){
-      $("#nav-placeholder").load("navbar.html");
-    });
-</script>
-
+<section id="nav-placeholder">
+    <script>
+        $("#nav-placeholder").load("navbar.html");
+    </script>
+</section>
 
 
 <section class="u-align-center u-clearfix u-image u-shading u-section-1" src="" data-image-width="1000"
@@ -111,8 +108,6 @@
 <script>
     $("#footer-placeholder").load("footer.html");
 </script>
-
-
 
 
 </body>
