--- a/private/adminListEvents.html
+++ b/private/adminListEvents.html
@@ -3,6 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <!--    Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+          crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+            crossorigin="anonymous"></script>
+
+    <!--    Google font-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=RocknRoll+One&display=swap"
+          rel="stylesheet">
+
+    <!--    fontawesome-->
+    <script src="https://kit.fontawesome.com/e5b5eed843.js" crossorigin="anonymous"></script>
+
+    <!--    Google jQuery-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <script src="../js/events_list_admin.js" defer></script>
+
+    <meta charset="UTF-8">
+    <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="keywords" content="Extractives @Clark">
@@ -38,23 +63,32 @@
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="Home">
     <meta property="og:type" content="website">
-
 </head>
 <body>
-
 <section id="nav-placeholder">
     <script>
         $("#nav-placeholder").load("navbar.html");
     </script>
 </section>
 
-<h1>Welcome Admin</h1>
-<a href="/admin-pub-list">Edit Publications</a>
-<br>
-<a href="/admin-blog-list">Edit Blogposts</a>
-<br>
-<a href="/get-events-admin">Edit Events</a>
+<section id="movie_section">
+    <div class="input-group mb-3 d-flex justify-content-end">
+        <button class="btn btn-info" onclick="addNewEvent()">Create a New Event</button>
+    </div>
+    <div class="col-lg-10">
+        <ul id="event_list" class="list-group">
+
+        </ul>
+    </div>
+
+</section>
+
+
 
 
 </body>
+
+
+
+
 </html>
