--- a/private/editEvents.html
+++ b/private/editEvents.html
@@ -2,29 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-
+    <title>New Publication</title>
     <!--    Bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
-          crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
             crossorigin="anonymous"></script>
 
-    <!--    Google font-->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=RocknRoll+One&display=swap"
-          rel="stylesheet">
-
-    <!--    fontawesome-->
-    <script src="https://kit.fontawesome.com/e5b5eed843.js" crossorigin="anonymous"></script>
-
-    <!--    Google jQuery-->
+    <!--    jQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <script src="../js/publication_list_admin.js" defer></script>
+
+    <script src="../js/edit_event.js" defer></script>
 
     <meta charset="UTF-8">
     <title>Title</title>
@@ -63,27 +53,44 @@
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="Home">
     <meta property="og:type" content="website">
-
 </head>
 <body>
+
 <section id="nav-placeholder">
     <script>
         $("#nav-placeholder").load("navbar.html");
     </script>
 </section>
-
-    <h1>Below is a list of publications on the site</h1>
-
-    <section id="movie_section">
-        <div class="input-group mb-3 d-flex justify-content-end">
-            <button class="btn btn-info" onclick="addNewPublication()">Create a New Publication</button>
+<section id="edit_events">
+    <form action="/save-event" method="post">
+        <div class="mb-3">
+            <label for="title" class="form-label">Title</label>
+            <input type="text" class="form-control" id="title" placeholder="Event Title" name="title" required>
         </div>
-            <div class="col-lg-10">
-                <ul id="publication_list" class="list-group">
-
-                </ul>
-            </div>
+        <div class="mb-3">
+            <label for="image" class="form-label">Event Poster Image</label>
+            <input class="form-control" type="text" name="image" placeholder="" id="image" required>
         </div>
-    </section>
+        <div class="mb-3">
+            <label for="location" class="form-label">Event Location</label>
+            <input type="text" class="form-control" id="location" placeholder="location" name="location" required>
+        </div>
+        <div class="mb-3">
+            <label for="summary" class="form-label">Summary</label>
+            <textarea rows="4" cols="50" class="form-control" name="summary" id="summary"></textarea>
+        </div>
+        <div class="mb-3">
+            <label for="date" class="form-label">Event Date</label>
+            <input type="text" class="form-control" id="date" placeholder="2022-01-01" name="date" required>
+        </div>
+        <div class="mb-3">
+            <p id="error_message" style="color: red"></p>
+        </div>
+        <div class="mb-3">
+            <button type="submit" class="btn btn-primary" style="width: 20%">Save</button>&nbsp;
+            <button type="button" class="btn btn-primary" style="width: 20%" onclick="onCancel()">Cancel</button>
+        </div>
+    </form>
+</section>
 </body>
 </html>
