index and about page changes

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
                     <div class="card h-100">
                         <img class="card-img-top h-100" src="pictures/home1.jfif" alt="Card image cap">
                         <div class="card-body">
-                            <h2 class="card-title">Current Research 1 </h2>
+                            <h2 class="card-title">We do research of natural resources</h2>
                             <a href="#" type="button" class="btn btn-primary">Learn More</a>
                         </div>
                     </div>
