index page changes

--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
                         <img class="card-img-top h-100" src="pictures/home1.jfif" alt="Card image cap">
                         <div class="card-body">
                             <h2 class="card-title">We do research of natural resources</h2>
-                            <a href="#" type="button" class="btn btn-primary">Learn More</a>
+                            <a href="/publications" type="button" class="btn btn-primary">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -74,8 +74,8 @@
                     <div class="card h-100">
                         <img class="card-img-top h-100" src="pictures/home2.jfif" alt="Card image cap">
                         <div class="card-body">
-                            <h2 class="card-title">Current Research 2 </h2>
-                            <a href="#" type="button" class="btn btn-primary">Learn More</a>
+                            <h2 class="card-title">A team of world class professors</h2>
+                            <a href="/our-team" type="button" class="btn btn-primary">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -83,8 +83,8 @@
                     <div class="card h-100">
                         <img class="card-img-top h-100" src="pictures/home3.jfif" alt="Card image cap">
                         <div class="card-body">
-                            <h2 class="card-title">Upcoming Event 1 </h2>
-                            <a href="#" type="button" class="btn btn-primary">Learn More</a>
+                            <h2 class="card-title">Enagage in our events</h2>
+                            <a href="/events" type="button" class="btn btn-primary">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -92,8 +92,8 @@
                     <div class="card h-100">
                         <img class="card-img-top h-100" src="pictures/home4.jfif" alt="Card image cap">
                         <div class="card-body">
-                            <h2 class="card-title">Previous event 1 </h2>
-                            <a href="#" type="button" class="btn btn-primary">Learn More</a>
+                            <h2 class="card-title">Follow our blog</h2>
+                            <a href="/view-blog" type="button" class="btn btn-primary">Learn More</a>
                         </div>
                     </div>
                 </div>
