--- a/public/team.html
+++ b/public/team.html
@@ -62,9 +62,9 @@
                                     <h4 class="card-title">Milton P. and Alice C, Higgins Professor of Environment
                                         and Society at the Graduate School of Geography Clark University</h4>
                                 </li>
-                                <li class="list-group-item">
+                                <li class="list-group-item text-start">
                                     <p>
-                                        is the Milton P. and Alice C. Higgins Professor of Environment and Society at
+                                        The Milton P. and Alice C. Higgins Professor of Environment and Society at
                                         the Graduate School of Geography. He is also Professorial Research Fellow at the
                                         University of Manchester, Research Associate with Rimisp- Latin American Center
                                         for Rural Development, Chile, and Honorary Professorial Fellow at the University
@@ -107,9 +107,9 @@
                                         International Development, Community and Environment at Clark University
                                     </h4>
                                 </li>
-                                <li class="list-group-item">
+                                <li class="list-group-item text-start">
                                     <p>
-                                        is Research Associate Professor in the Department of International Development,
+                                        Research Associate Professor in the Department of International Development,
                                         Community and Environment at Clark University in Massachusetts, USA. Her
                                         research has addressed the political ecology of natural gas in Bolivia and the
                                         implications of the gas economy for both indigenous peoples and regional
@@ -144,9 +144,9 @@
                                     <h2 class="card-title">John Rogan</h2>
                                     <h4 class="card-title">Professor of Geography at Clark University </h4>
                                 </li>
-                                <li class="list-group-item">
+                                <li class="list-group-item text-start">
                                     <p>
-                                        is a Professor of Geography at Clark University. He specializes in landscape
+                                        A Professor of Geography at Clark University. He specializes in landscape
                                         ecology, fire ecology, optical remote sensing and GIScience. Recent research
                                         projects have involved monitoring land cover change in California using remote
                                         sensing date, mapping wildfire burn severity in southern California and
@@ -179,7 +179,7 @@
                                     <h4 class="card-title">Postdoctoral Researcher in the Department of Geography at
                                         Clark University</h4>
                                 </li>
-                                <li class="list-group-item">
+                                <li class="list-group-item text-start">
                                     <p>
                                         is a Postdoctoral Researcher in the Department of Geography at Clark University.
                                         His work analyzes data from multiple sources to measure, model, and describe
@@ -214,7 +214,7 @@
                                     <h2 class="card-title">Laura Aileen Sauls </h2>
                                     <h4 class="card-title">Research Scientist with Extractives@Clark</h4>
                                 </li>
-                                <li class="list-group-item">
+                                <li class="list-group-item text-start">
                                     <p>
                                         is a Postdoctoral Fellow in Environmental Studies at the College of the Holy
                                         Cross (Worcester, MA) and a Research Scientist with Extractives@Clark. She
