--- a/public/footer.html
+++ b/public/footer.html
@@ -7,6 +7,10 @@
                     <hr/>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">📧: Extractives@clarku.edu</li>
+                        <!-- twitter icon -->
+                        <li class="list-group-item"></li><a href="https://mobile.twitter.com/extractivescu"
+                        style="color: #0c0068;">
+                        Follow us on Twitter!</a></li>
                         <li class="list-group-item">© 2022,Clark Extractives</li>
                     </ul>
                 </div>
